--- a/public/assets/css/lainnya/lainnya.css
+++ b/public/assets/css/lainnya/lainnya.css
@@ -78,6 +78,6 @@
 }
 
 .btn-primary {
-    background-color: #00A3FF !important;
-    border: none;
+    background-color: #27BCCD !important;
+    border-color: #27BCCD !important;
 }
