--- a/public/assets/css/outlet.css
+++ b/public/assets/css/outlet.css
@@ -115,7 +115,7 @@
 
 .card-active {
     border-radius: 8px;
-    border: 1px solid #00A3FF;
+    border: 1px solid #27BCCD;
     background: rgba(219, 242, 255, 0.50);
 }
 
